--- a/src/examples/loop_functions/CMakeLists.txt
+++ b/src/examples/loop_functions/CMakeLists.txt
@@ -2,4 +2,5 @@
 if(ARGOS_QTOPENGL_FOUND)
   add_subdirectory(debug_loop_functions)
   add_subdirectory(trajectory_loop_functions)
+  add_subdirectory(ARKloopfunction)
 endif(ARGOS_QTOPENGL_FOUND)
